tests/baselines/reference/conditionalTypesExcessProperties.errors.txt
tests/cases/conformance/types/conditional/conditionalTypesExcessProperties.ts(8,24): error TS2322: Type '{ test: string; arg: A; }' is not assignable to type 'Something<A>'.
  Type '{ test: string; arg: A; }' is not assignable to type '{ test: string; }'.
    Object literal may only specify known properties, and 'arg' does not exist in type '{ test: string; }'.
tests/cases/conformance/types/conditional/conditionalTypesExcessProperties.ts(9,25): error TS2322: Type '{ test: string; arg: A; arr: A; }' is not assignable to type 'Something<A>'.
  Type '{ test: string; arg: A; arr: A; }' is not assignable to type '{ test: string; }'.
    Object literal may only specify known properties, and 'arg' does not exist in type '{ test: string; }'.


==== tests/cases/conformance/types/conditional/conditionalTypesExcessProperties.ts (2 errors) ====
    type Something<T> = { test: string } &  (T extends object ? {
        arg: T
    } : {
        arg?: undefined
        });
    
    function testFunc2<A extends object>(a: A, sa: Something<A>) {
        sa = { test: 'hi', arg: a }; // not excess (but currently still not assignable)
                           ~~~~~~
!!! error TS2322: Type '{ test: string; arg: A; }' is not assignable to type 'Something<A>'.
!!! error TS2322:   Type '{ test: string; arg: A; }' is not assignable to type '{ test: string; }'.
!!! error TS2322:     Object literal may only specify known properties, and 'arg' does not exist in type '{ test: string; }'.
        sa = { test: 'bye', arg: a, arr: a } // excess
                            ~~~~~~
!!! error TS2322: Type '{ test: string; arg: A; arr: A; }' is not assignable to type 'Something<A>'.
!!! error TS2322:   Type '{ test: string; arg: A; arr: A; }' is not assignable to type '{ test: string; }'.
!!! error TS2322:     Object literal may only specify known properties, and 'arg' does not exist in type '{ test: string; }'.
    }
    